# MicrostructureOrientation

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: optimize_diagonals.py  optimize_divergence.py  optimize_multidiag.py  process_images.py  results_vs_expe.py
src/kelvin_model/: __init__.py  _kelvin_utils.py  _optimize_diagonals.py  _optimize_divergence.py  compute_stress.py  image_correlation.py  kelvin_utils.py  optimize_common.py  optimize_diagonals.py  optimize_div.py  optimize_divergence.py  results_vs_expe.py  run_optimize_diagonals.py  run_optimize_multidiag.py
src/kelvin_model/include/: kelvin_lib.hpp
src/kelvin_model/run/: optimize_diagonals.py  optimize_multidiag.py
src/kelvin_model/src/: kelvin_lib.cpp  kelvin_lib.hpp
src/microstructure_orientation/: __init__.py  exposure_fusion.py  gabor_filter.py  gaussian_fit.py  make_plots.py  peak_detection.py  run_process_images.py
src/microstructure_orientation/gaussian_fit/: __init__.py  gaussian_fit.py  gpu_utils.py  periodic_gaussian.py
src/microstructure_orientation/peak_detection/: __init__.py  peak_detection.py  peak_utils.py
src/microstructure_orientation/run/: process_images.py
